--- a/functor-extras.cabal
+++ b/functor-extras.cabal
@@ -1,24 +1,24 @@
 name:                functor-extras
 version:             0.1.0.0
--- synopsis:
--- description:
+synopsis:            Multi-level functors
+description:         Support for functors in functors.
 homepage:            https://github.com/githubuser/functor-extras#readme
-license:             BSD3
+license:             BSD2
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2020 Author name here
-category:            Web
+author:              Brian Hurt
+maintainer:          bhurt42@gmail.com
+copyright:           2020 Brian Hurt
+category:            Data
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Data.Functor.Extras
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/functor-extras
+  location: https://github.com/bhurt/functor-extras
